--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,7 @@
+p {
+  margin: 1rem;
+}
+
 .App {
   text-align: center;
 }
@@ -26,6 +30,10 @@
 
 .App-link {
   color: #61dafb;
+}
+
+.left {
+  text-align: left;
 }
 
 @keyframes App-logo-spin {
